--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@finos/perspective": "^1.6.2",
-    "@finos/perspective-viewer": "^1.6.2",
-    "@finos/perspective-viewer-d3fc": "^1.6.2",
-    "@finos/perspective-viewer-datagrid": "^1.6.2",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.19",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.0.11",
-    "bootstrap": "^4.2.1",
-    "puppeteer": "^1.19.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "2.1.3"
+    "@finos/perspective": "^2.10.1",
+    "@finos/perspective-viewer": "^2.10.1",
+    "@finos/perspective-viewer-d3fc": "^2.10.1",
+    "@finos/perspective-viewer-datagrid": "^2.10.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "bootstrap": "^5.3.3",
+    "puppeteer": "^22.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -34,7 +34,11 @@
   ],
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4"
-  }
+    "source-map-loader": "^5.0.0",
+    "typescript": "^5.4.5"
+  },
+  "description": "Starter repo for task 2 of JPMC's Forage program",
+  "main": "index.js",
+  "author": "Vinoth",
+  "license": "ISC"
 }
